tdf#98226: fix undo of table AutoFormat

The new call to SwTable::SetTableStyleName() was not recorded in
SwUndoTableAutoFormat and hence persisted even after Undo.

(regression from 73f4a06c0bce51c7c8b9ae9adfdc7ffac27d06b4)

Change-Id: Ia7f769dafa62f02ff8e4b0596b48266190c7a69b