sw/source/core/inc/UndoTable.hxx
@@ -142,6 +142,7 @@ class SwUndoTableNumFormat;
 
 class SwUndoTableAutoFormat : public SwUndo
 {
+    OUString m_TableStyleName;
     sal_uLong nSttNode;
     SaveTable* pSaveTable;
     std::vector< std::shared_ptr<SwUndoTableNumFormat> > m_Undos;
